--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="Default">
 <head>
+
+	<meta name="google-site-verification" content="eC3zkx1x2QRwuYaoHs_H9vCusff0qDiR59jf8PTsAzM" />
+
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="">
